close to final version 2019

--- a/bib/immler.bib
+++ b/bib/immler.bib
@@ -33,3 +33,18 @@ publisher = {Springer}
   publisher = {EasyChair},
   bibsource = {EasyChair, http://www.easychair.org},
   issn      = {2398-7340}}
+  
+  @inproceedings{ARCH_COMP18,
+  author    = {Fabian Immler and Matthias Althoff and Xin Chen and Chuchu Fan and Goran Frehse and Niklas Kochdumper and Yangge Li and Sayan Mitra and Mahendra Singh Tomar and Majid Zamani},
+  title     = {ARCH-COMP18 Category Report: Continuous and Hybrid Systems with Nonlinear Dynamics},
+  booktitle = {ARCH18. 5th International Workshop on Applied Verification of Continuous and Hybrid Systems},
+  editor    = {Goran Frehse},
+  series    = {EPiC Series in Computing},
+  volume    = {54},
+  pages     = {53--70},
+  year      = {2018},
+  publisher = {EasyChair},
+  bibsource = {EasyChair, https://easychair.org},
+  issn      = {2398-7340},
+  url       = {https://easychair.org/publications/paper/gjfh},
+  doi       = {10.29007/mskf}}
