Closer to Final Version 2019

--- a/main.tex
+++ b/main.tex
@@ -147,7 +147,7 @@
 \label{sect:introduction}
 
 \begin{framed}
-\paragraph{Disclaimer} The presented report of the ARCH friendly competition for \textit{continuous and hybrid systems with nonlinear dynamics} aims at providing a landscape of the current capabilities of verification tools. We would like to stress that each tool has unique strengths---not all of the specificities can be highlighted within a single report. To reach a consensus in what benchmarks are used, some compromises had to be made so that some tools may benefit more from the presented choice than others. The obtained results have been verified by an independent repeatability evaluation. To establish further trustworthiness of the results, the code with which the results have been obtained is publicly available at \href{https://gitlab.com/goranf/ARCH-COMP}{gitlab.com/goranf/ARCH-COMP}.
+\paragraph{Disclaimer} The presented report of the ARCH friendly competition for \textit{continuous and hybrid systems with nonlinear dynamics} aims at providing a landscape of the current capabilities of verification tools. We would like to stress that each tool has unique strengths---not all of the specificities can be highlighted within a single report. To reach a consensus in what benchmarks are used, some compromises had to be made so that some tools may benefit more from the presented choice than others. The obtained results have been verified by an independent repeatability evaluation. To establish further trustworthiness of the results, the code with which the results have been obtained is publicly available as Docker~\cite{boettiger2015introduction} containers at \href{https://gitlab.com/goranf/ARCH-COMP}{gitlab.com/goranf/ARCH-COMP}.
 \end{framed}
 
 
@@ -194,7 +194,7 @@ performance: it should scale (modulo possibly large constant factors) like ``reg
 implementing similar algorithms. Isabelle/HOL is available at \url{https://isabelle.in.tum.de}, HOL-ODE-Numerics is part of the Archive of Formal Proofs \url{http://isa-afp.org/entries/Ordinary_Differential_Equations.shtml}.
 
 
-\paragraph{JuliaReach.} (Marcelo Forets, Christian Schilling, David P. Sanders, Luis Benet) JuliaReach~\cite{BogomolovFFPS19} is a toolbox for reachability computations of dynamical systems, available at \url{http://juliareach.org}. For nonlinear reachability we combine functionality from \href{https://github.com/JuliaIntervals/TaylorModels.jl}{TaylorModels.jl}~\cite{TaylorModels.jl}, \href{https://github.com/JuliaDiff/TaylorSeries.jl}{TaylorSeries.jl}~\cite{TaylorSeries.jl} and \href{https://github.com/PerezHz/TaylorIntegration.jl/issues}{TaylorIntegration.jl}~\cite{TaylorIntegration.jl}. First, we compute a non-validated integration using a Taylor model of order $n_T$. The coefficients of that series are polynomials of order $n_Q$ in the variables that denote the small variations of the initial conditions. We obtain a time step from the last two coefficients of this time series. In order to validate the integration step, we compute a second integration using intervals as coefficients of the polynomials in time, and we obtain a bound for the integration using a Lagrange-like remainder. The remainder is used to check the contraction of Picard's iteration. If the combination of the time step and the remainder do not satisfy the contraction, we iteratively enlarge the remainder or eventually shrink the time step. Finally, we evaluate the initial Taylor series with the valid remainder at the time step for which the contraction has been proved, which is also evaluated in the initial box of deviations from the central initial condition, to yield an over-approximation.
+\paragraph{JuliaReach.} (Marcelo Forets, Christian Schilling, David P. Sanders, Luis Benet) JuliaReach~\cite{BogomolovFFPS19} is a toolbox for reachability computations of dynamical systems, available at \url{http://juliareach.org}. For nonlinear reachability we combine functionality from \href{https://github.com/JuliaIntervals/TaylorModels.jl}{TaylorModels.jl}~\cite{TaylorModels.jl}, \href{https://github.com/JuliaDiff/TaylorSeries.jl}{TaylorSeries.jl}~\cite{TaylorSeries.jl} and \href{https://github.com/PerezHz/TaylorIntegration.jl}{TaylorIntegration.jl}~\cite{TaylorIntegration.jl}. First, we compute a non-validated integration using a Taylor model of order $n_T$. The coefficients of that series are polynomials of order $n_Q$ in the variables that denote the small variations of the initial conditions. We obtain a time step from the last two coefficients of this time series. In order to validate the integration step, we compute a second integration using intervals as coefficients of the polynomials in time, and we obtain a bound for the integration using a Lagrange-like remainder. The remainder is used to check the contraction of a Picard iteration. If the combination of the time step and the remainder do not satisfy the contraction, we iteratively enlarge the remainder or possibly shrink the time step. Finally, we evaluate the initial Taylor series with the valid remainder at the time step for which the contraction has been proved, which is also evaluated in the initial box of deviations from the central initial condition, to yield an over-approximation. The approach is (numerically) sound due to rigorous interval bounds in the Taylor approximation.
 %------------------------------------------------------------------------------
 
 \newpage
@@ -946,6 +946,11 @@ The computation times of various tools for the van der Pol benchmark are listed 
 % In the next year, we hope that more tools could join the friendly competition and we will also collect more benchmarks which are not only continuous but also hybrid. We will also try to expose the advantages of different tools by examples. The reports of other categories can be found in the proceedings and on the ARCH website:  \href{http://cps-vo.org/group/ARCH}{cps-vo.org/group/ARCH}.
 Three tools participated for the first time in the Nonlinear Dynamics category of ARCH-COMP: Ariadne, DynIbex, and JuliaReach. Unfortunately, three tools from last year did not continue to participate: CORA/SX, C2E2, and SymReach.
 
+We always cared about repeatability of the reported results.
+This year, we enforced a uniform format for repeatability packages:
+All of the tools and benchmarks are made available as Docker~\cite{boettiger2015introduction} containers (on \href{https://gitlab.com/goranf/ARCH-COMP}{gitlab.com/goranf/ARCH-COMP}).
+This improves and simplifies reproducibility of our results.
+
 Compared to last year's competition~\cite{ARCH_COMP18}, we made some careful adjustments to the existing benchmark problems to provide a more fine-grained overview of the capabilities of the different tools:
 We included a parameter for the stiffness of the van-der-Pol system, added another initial set to the Laub-Loomis problem, and report on the width of final enclosures.
 
@@ -956,8 +961,8 @@ Triggered by the participation in this competition, individual tools made progre
 %and can now solve benchmarks that were previously out of reach:
 \begin{itemize}
 \item Flow* entirely updated its module for continuous dynamics, which  shows a much better performance while maintaining the same (or even better) precision.
-\item Isabelle/HOL still can not automatically deal with hybrid systems, but its internals have been refactored significantly. This will simplify automatic reachability analysis for hybrid systems. This refactoring will also help to implement a stand-alone application that parses a standard input file format in the future.
-\item Last year, JuliaReach participated only in the AFF category. This competition fostered the \emph{first} collaboration between half of the JuliaReach team and they evaluate it as very fruitful. The Julia Reach team would very probably participate in next year's edition.
+\item Isabelle/HOL still cannot automatically deal with hybrid systems, but its internals have been refactored significantly. This will simplify automatic reachability analysis for hybrid systems. This refactoring will also help to implement a stand-alone application that parses a standard input file format in the future.
+\item Last year, JuliaReach participated only in the AFF category. This competition fostered the \emph{first} collaboration between the two halves of the JuliaReach team. The JuliaReach team evaluates this collaboration as very fruitful and is expecting to participate in next year's edition.
 
 \end{itemize}
 
