--- a/bib/immler.bib
+++ b/bib/immler.bib
@@ -48,3 +48,13 @@ publisher = {Springer}
   issn      = {2398-7340},
   url       = {https://easychair.org/publications/paper/gjfh},
   doi       = {10.29007/mskf}}
+  @article{boettiger2015introduction,
+  title={An introduction to Docker for reproducible research},
+  author={Boettiger, Carl},
+  journal={ACM SIGOPS Operating Systems Review},
+  volume={49},
+  number={1},
+  pages={71--79},
+  year={2015},
+  publisher={ACM}
+}
