once more, closer (remove last(?) bit of SpaceEx)

--- a/main.tex
+++ b/main.tex
@@ -1015,12 +1015,12 @@ Virtual machine on VMware Workstation 11 with a single core CPU and 4.0 GB memor
  \item Average CPU Mark on \url{www.cpubenchmark.net}: 8948 (full), 1893 (single thread)
 \end{itemize}
 
-\subsection{\texorpdfstring{M$_\mathit{SpaceEx}$}{M-SpaceEx}} \label{sec:machine:spaceex}
-\begin{itemize}
-	\item Processor: Intel Core i7-7920HQ CPU @ 3.1GHz x 4
-    \item Memory: 16 GB
-    \item Average CPU Mark on \url{www.cpubenchmark.net}: 10230 (full), 2161 (single thread)
-\end{itemize}
+%\subsection{\texorpdfstring{M$_\mathit{SpaceEx}$}{M-SpaceEx}} \label{sec:machine:spaceex}
+%\begin{itemize}
+%	\item Processor: Intel Core i7-7920HQ CPU @ 3.1GHz x 4
+%    \item Memory: 16 GB
+%    \item Average CPU Mark on \url{www.cpubenchmark.net}: 10230 (full), 2161 (single thread)
+%\end{itemize}
 
 \subsection{\texorpdfstring{M$_{\text{DynIbex}}$}{M-DynIbex}} \label{sec:machine:DynIbex}
 \begin{itemize}
