removed goran.frehse's email

--- a/main.tex
+++ b/main.tex
@@ -104,7 +104,7 @@
 \and
   ENSTA ParisTech,
    Palaiseau, France\\
-   \email{\{alexandre.chapoutot,goran.frehse\}@ensta-paristech.fr}
+   \email{alexandre.chapoutot@ensta-paristech.fr}
 \and
   University of Verona,
   Verona, Italy\\
