fixed authors in report and presentation

--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -42,21 +42,21 @@ Nonlinear Dynamics}
 \author{
   Fabian Immler,
   Matthias Althoff,
+  Luis Benet,
+  Alexandre Chapoutot,
   Xin Chen,
-  Chuchu Fan,
-  Goran Frehse,
-  %  Ariful Islam
-  %  \and 
-  Niklas Kochdumper,
-  Yangge Li,
-  Sayan Mitra,
-  Mahendra Singh Tomar,
-  Majid Zamani
-}
+  Marcelo Forets,
+  Luca Geretti, Niklas Kochdumper, David P.Sanders, Christian Schilling}
 \institute{
-  Technische Universit\"at M\"unchen (Germany), University of Dayton (USA), 
+  Carnegie Mellon University (USA),
+  ENSTA ParisTech (France),
+  IST Austria (Austria),
+  Technische Universit\"at M\"unchen (Germany),
+  Univ. Grenoble Alpes (France),
+  Universidad Nacional Aut\'onoma de M\'exico, (Mexico),
+  University of Dayton (USA), 
   University of Illinois at Urbana-Champaign (USA),
-  Univ. Grenoble Alpes (France)
+  University of Verona (Italy),
 }
 \AtBeginSection[]{
   \begin{frame}
@@ -188,7 +188,7 @@ Nonlinear Dynamics}
 	\end{itemize}
 	\begin{figure}
 		\subfigure[CORA]{
-			\includegraphics[width=4cm, height=4cm]{../results_CORA/spacecraftNonlin_04June2018.eps}}
+			\includegraphics[width=4cm, height=4cm]{../results_CORA/spacecraft_13March2019.eps}}
 		\subfigure{
 			\tiny
 			\raisebox{9em}{
